style.css
nav {
  background-color: #0c4b68;
  justify-content: space-between;
  align-items: center;
  width: 100%; 
  position: fixed; 
  top: 150px; 
  left: 3%;
  right: 3%; 
}

nav a {
  /*background-color: #0c4b68;*/
  float: center;
  color: white;
  font-family: monospace;
  font-size: 16px;
  text-decoration: none;
  padding: 12.5px 3%;
}

nav a:hover {
  background-color: #6191a1;
}

nav t {
  float: left;
  background-color: #d5e0e5;
  color: rgb(1, 33, 55);
  font-family: monospace;
  font-size: 20px;
  font-weight: bold;
  padding: 10px 10%;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 20px;
}

.oval-pic {
  width: 200px;
  height: 200px;
  border-radius: 40%;
  background-image: url(Nav_Pic.jpg);
  background-size: cover;
  margin-top: 20px;
}

body {
  width: 100%;
  height: 100%;
  /*overflow: hidden;
  margin-top: 100vh;/*
  /*margin-left: 300vw;
  margin-right: 300vw;*/
}

@media (max-width: 768px) {
  .container {
      width: 100%;
      padding: 10px;
  }
}

